--- a/app/src/main/res/layout/activity_detail_artikel.xml
+++ b/app/src/main/res/layout/activity_detail_artikel.xml
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_item"
-            android:fontFamily="sans-serif-black"
+            android:lineHeight="25sp"
             android:paddingHorizontal="16dp"
             android:paddingVertical="8dp"
             android:textColor="@color/blue"
