--- a/app/src/main/res/layout/row_item_dzikir_doa.xml
+++ b/app/src/main/res/layout/row_item_dzikir_doa.xml
@@ -42,6 +42,7 @@
         android:paddingEnd="16dp"
         android:paddingBottom="16dp"
         android:textColor="@color/blue"
+        android:lineHeight="25dp"
         android:textSize="16sp"
         android:textStyle="italic" />
 </LinearLayout>
